--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Apollo</title>
+  </head>
+<body>
 <h1>Apollo</h1>
+<h2>He/Him</h2>
+<div>
+<a href="https://ace-attorney.neocities.org/">Check out my Neocities</a>
+  <p>I'm an 18 year old artist</p>
+  <p>I'm interested in Ace Attirney, Hetalia, Attack on Titan, and many more I forget</p>
+</div>
+</body>
+</html>
