--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div>
 <a href="https://ace-attorney.neocities.org/">Check out my Neocities</a>
   <p>I'm an 18 year old artist</p>
-  <p>I'm interested in Ace Attirney, Hetalia, Attack on Titan, and many more I forget</p>
+  <p>I'm interested in Ace Attorney, Hetalia, Attack on Titan, and many more I forget</p>
 </div>
 </body>
 </html>
